# bcftools

./: .gitignore  .gitmodules  CMakeLists.txt  bam2bcf.c  config.h.in  consensus.c  convert.c  csq.c  extsort.c  mpileup.c  polysomy.c  regidx.c  reheader.c  stat_modes.h  tabix.c  tsv2vcf.c  vcfannotate.c  vcfcall.c  vcfcnv.c  vcfconcat.c  vcfconvert.c  vcffilter.c  vcfgtcheck.c  vcfindex.c  vcfisec.c  vcfmerge.c  vcfnorm.c  vcfquery.c  vcfroh.c  vcfsom.c  vcfsort.c  vcfstats.c  vcfview.c  version.h.in
plugins/: GTisec.c  GTsubset.c  ad-bias.c  af-dist.c  check-ploidy.c  check-sparsity.c  color-chrs.c  contrast.c  dosage.c  fill-from-fasta.c  fill-tags.c  fixploidy.c  fixref.c  frameshifts.c  guess-ploidy.c  gvcfz.c  impute-info.c  indel-stats.c  isecGT.c  mendelian.c  missing2ref.c  parental-origin.c  prune.c  remove-overlaps.c  scatter.c  setGT.c  smpl-stats.c  split-vep.c  split.c  tag2tag.c  trio-dnm.c  trio-stats.c  trio-switch-rate.c
test/: CMakeLists.txt  test-regidx.c
